crates/smip_proc_macros/tests/ui-fail/service-no-id.stderr
error: Missing field `id`
 --> tests/ui-fail/service-no-id.rs:3:1
  |
3 | #[service]
  | ^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `service` (in Nightly builds, run with -Z macro-backtrace for more info)
